# SimpleAIHackason-Cteam

./: .env.sample  .gitignore  README.md  google_serarch.py  main.py  sample.py  search_url_details.py
backend/: Cargo.toml
backend/src/: main.rs  models.rs  scraper.rs
voyage-craft-frontend/: package-lock.json  package.json
voyage-craft-frontend/public/: place.json
voyage-craft-frontend/src/app/: layout.js  page.js
voyage-craft-frontend/src/app/result/: page.jsx
voyage-craft-frontend/src/components/: resultCard.jsx
