[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
log = "0.4.22"
openai_api_rust = "0.1.9"
regex = "1.11.1"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features=["full"]}
